# opg-data-lpa

./: .adr-dir  .env  .envrc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  Makefile  README.md  build.sh  docker-compose.bridge-ual.yml  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  pytest.ini  renovate.json  setup.cfg
.circleci/: config.yml  set_env.sh
.github/: CODEOWNERS  labeller.yml
.github/workflows/: _destroy_environment.yml  _docker_build_scan_push.yml  _integration_tests.yml  _python_unit_tests.yml  _terraform.yml  _terraform_deploy.yml  _terraform_lint.yml  analysis-codeql.yml  analysis-tfsec-to-github-security.yml  build.yml  deploy.yml  destroy_workspaces.yml  scanner.yml  sub-task-integration-tests.yml  workflow_path_to_live.yml  workflow_pr.yml  workflow_pr_close.yml
docs/: pull_request_template.md
integration_tests/: integration_tests.md
integration_tests/v1/: conftest.py  pyproject.toml  requirements.txt  test_healthcheck.py  test_lpa_online_tool.py  test_request_code.py  test_use_an_lpa.py
integration_tests/v1/response_schemas/: healthcheck_schema.json  lpa_online_tool_schema.json  use_an_lpa_schema.json
mock_aws_services/: Dockerfile  create_secret.py  create_secret.sh
mock_sirius_backend/: Dockerfile  app.py  requirements.txt  sirius-config.yaml  sirius_api.yaml  sirius_public_api.yaml  sirius_secret_api.yaml
pact/: requirements.txt
pact_provider/: Dockerfile  check_pact_deployable.py  consumer_pact_check.py  docker-compose.yml  tag_pact.py
terraform/: terraform.md
(+176 files in other folders)
