[project]
name = "integration-tests"
version = "0.1.0"
requires-python = "==3.14.6"
dependencies = [
    "boto3==1.43.26",
    "coverage==7.14.1",
    "fakeredis==2.36.1",
    "flask==3.1.3",
    "jsonschema==4.26.0",
    "pytest==9.0.3",
    "pytest-env==1.6.0",
    "pytest-html==4.2.0",
    "pytest-xdist==3.8.0",
    "requests_aws4auth==1.3.2",
]
